Fixed About me picture and text alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -192,7 +192,7 @@ footer{
 	display:inline-block;
 	font-size:2em;
 	font-weight:300;
-	margin:0 0 30px 0
+	margin:0 0 05px 0
 }
 .heading:after{
 	position:absolute;
